TriggerFactory should create a mutable parameters map #120